# candle

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: nixpacks.toml  pyproject.toml
backend/app/: config.py  db.py  main.py  middleware.py  models.py  schemas.py
backend/app/ingest/: __init__.py  clinicaltrials.py  embed.py  link.py  overviews.py  pubmed.py  run.py  summarise.py
backend/app/routers/: __init__.py  ask.py  publications.py  sync.py  trials.py
backend/app/services/: __init__.py  embeddings.py  glossary.py  http_retry.py  intent.py  llm_guardrails.py  openai_executor.py  openai_schema.py  publication_overviews.py  rag.py  rerank.py  retrieval.py  trials.py
backend/scripts/: cleanup_non_chm_trials.py
backend/tests/: conftest.py  test_ask_router.py  test_cleanup_non_chm_trials.py  test_clinicaltrials.py  test_cursor_pagination.py  test_embed_ingest.py  test_embeddings_service.py  test_glossary.py  test_ingest_run.py  test_intent.py  test_llm_guards.py  test_openai_schema.py  test_overview_ingest.py  test_publication_linking.py  test_publication_overview.py  test_pubmed.py  test_rag_advice_guard.py  test_rag_retrieval_wiring.py  test_rag_stream.py  test_rate_limiting.py  test_rerank.py  test_retrieval.py  test_retrieval_live.py  test_safety_regression.py  test_smoke.py  test_sync_router.py  test_trial_summaries.py  test_trials_router.py  test_trials_service.py
db/init/: 001_schema.sql
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/docs/: ADA_CLOSURE.md
(+49 files in other folders)
