[project]
name = "candle-backend"
version = "0.1.0"
description = "Candle backend and ingestion pipeline"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "greenlet>=3.1.1",
  "httpx>=0.28.0",
  "openai>=1.60.0",
  "pgvector>=0.3.6",
  "pydantic-settings>=2.6.1",
  "sqlalchemy>=2.0.36",
  "tiktoken>=0.8.0",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
